# image-service-lambda

./: .gitignore  Cargo.toml  Makefile  README.md
get-img/: Cargo.toml
infrastructure/: package-lock.json
infrastructure/lib/: image-service-stack.ts
lambdas/: Cargo.toml
lambdas/src/: get-upload-uri.rs  transform-s3.rs  transform.rs
shared/: Cargo.toml
shared/src/: config.rs  http.rs  image.rs  lib.rs
transformer/: Cargo.toml
transformer/src/: main.rs  transform.rs
upload-img/: Cargo.toml
upload-img/src/: handler.rs  main.rs
