[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.7"
lambda_http = { version = "0.7" }
aws_lambda_events = { version="0.7" }
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
aws-sdk-s3 = { version ="0.21.0" }
aws-config = "0.51.0"
image = "0.24.5"
aws-smithy-http = "0.51.0"
sha1 = "0.10.5"
aws-sdk-dynamodb = "0.21.0"
aws-sdk-appconfig = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"