[package]
name = "upload-img"
version = "0.1.0"
edition = "2018"

[dependencies]
aws-config = "0.51.0"
aws-sdk-s3 = "0.21.0"
lambda_http = { version = "0.7", default-features = false, features = ["apigw_rest"] }
lambda_runtime = "0.7"
serde = "1.0.142"
serde_json = "1.0.85"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
